CloudComputingFinal-main/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\jspac\go\bin\kompose.exe convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\jspac\go\bin\kompose.exe convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/cloudcomputingfinal-main-db: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: backendapi:latest
          name: backendapi
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
