CloudComputingFinal-main/canvasintegration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\jspac\go\bin\kompose.exe convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: canvasintegration
  name: canvasintegration
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: canvasintegration
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\jspac\go\bin\kompose.exe convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/cloudcomputingfinal-main-db: "true"
        io.kompose.service: canvasintegration
    spec:
      containers:
        - image: canvasintegration:latest
          name: canvasintegration
          resources: {}
      restartPolicy: Always
status: {}
