CloudComputingFinal-main/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\jspac\go\bin\kompose.exe convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "81"
      port: 81
      targetPort: 80
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
